Change container width
set it to 30%

--- a/dims.css
+++ b/dims.css
@@ -7,7 +7,7 @@ https://github.com/dsatriia/simple-web-portofolio/
 }
 .container {
     margin: auto;
-    width: 286px;
+    width: 30%;
     top: 50px;
     position: relative;
     /* background-color: aliceblue; */
